--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,14 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-        google()
+        // Check that you have the following line (if not, add it):
+        google()  // Google's Maven repository
 
     }
     dependencies {
+        // Add this line
         classpath 'com.google.gms:google-services:4.3.10'
+
     }
 }
 
@@ -14,7 +18,14 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
 }
 
+allprojects {
+    repositories {
+        // Check that you have the following line (if not, add it):
+        google()  // Google's Maven repository
+        jcenter()
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
