--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version= '1.3.72'
     repositories {
         // Check that you have the following line (if not, add it):
         google()  // Google's Maven repository
+        mavenCentral()
+
+    }
+    ext{
+        roomVersion='2.3.0'
+        navigationVersion='2.3.5'
+        coroutineVersion='1.3.9'
 
     }
     dependencies {
         // Add this line
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.android.tools.build:gradle:7.0.4'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
 
     }
 }
@@ -16,14 +26,6 @@ plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.5.30' apply false
-}
-
-allprojects {
-    repositories {
-        // Check that you have the following line (if not, add it):
-        google()  // Google's Maven repository
-        jcenter()
-    }
 }
 
 task clean(type: Delete) {
