--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:2.4.2"
     implementation "androidx.room:room-runtime:2.4.2"
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
     kapt "androidx.room:room-compiler:$roomVersion"
 
     //VM
